--- a/clash/bclash.ini
+++ b/clash/bclash.ini
@@ -61,7 +61,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;节点地区分组参考本项目推荐机场而设立
 custom_proxy_group=🚀 手动选择`select`[]♻️ 自动选择`[]ZGOZGO`[]🇺🇸 美国节点`[]🇷🇺俄罗斯`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]V2-无限流量`[]Worker-CMCC`[]🇬🇧 英国节点`[]V2-洛杉矶`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🚀 GitHub`select`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连`[]ZGOZGO`[]🇺🇸 美国节点`[]🇷🇺俄罗斯`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]V2-D i m t`[]Worker-CMCC`[]🇬🇧 英国节点`[]V2-洛杉矶`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`.*
+custom_proxy_group=🚀 GitHub`select`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连`[]ZGOZGO`[]🇺🇸 美国节点`[]🇷🇺俄罗斯`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]V2-无限流量`[]Worker-CMCC`[]🇬🇧 英国节点`[]V2-洛杉矶`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`.*
 custom_proxy_group=🚀 GitHub`select`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连`[]ZGOZGO`[]🇺🇸 美国节点`[]🇷🇺俄罗斯`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]V2-无限流量`[]Worker-CMCC`[]🇬🇧 英国节点`[]V2-洛杉矶`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`.*
 custom_proxy_group=📢 谷歌FCM`select`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连`[]ZGOZGO`[]🇺🇸 美国节点`[]🇷🇺俄罗斯`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]V2-无限流量`[]Worker-CMCC`[]🇬🇧 英国节点`[]V2-洛杉矶`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`.*
 custom_proxy_group=🇬 谷歌服务`select`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连`[]ZGOZGO`[]🇺🇸 美国节点`[]🇷🇺俄罗斯`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]V2-无限流量`[]Worker-CMCC`[]🇬🇧 英国节点`[]V2-洛杉矶`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`.*
