--- a/clash/bbclash.ini
+++ b/clash/bbclash.ini
@@ -64,20 +64,23 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 国外流量`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点
+custom_proxy_group=🚀 国外流量`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
 custom_proxy_group=✈️ 手动选择`select`.*
 custom_proxy_group=🛩️ 手动选择备用`select`.*
-custom_proxy_group=🚁 自建节点`select`(ZGO|backup|_)
-custom_proxy_group=✅ 国内直连`select`[]DIRECT`(电信|联通|移动)`[]🚀 国外流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`
-custom_proxy_group=🛸 IP归属地伪装`select`[]✅ 国内直连`(CN|电信|联通|移动)`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 国外流量`[]✅ 国内直连`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点
-custom_proxy_group=🧚 AI`select`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点
-custom_proxy_group=📹 Google-YouTube`select`[]🚀 国外流量`(尼日利亚|NG)`(土耳其|TR|Turkey)`(蒙古|MN)`(澳门|MO)`(RU)`(尼泊尔|NP)`(阿塞拜疆)`(孟加拉|BD)`(约旦|JO)`(柬埔寨|KH)`(阿根廷|AR)`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点
-custom_proxy_group=🎬 EMBY`select`[]🚀 国外流量`[]✅ 国内直连`(Emby|emby)`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点
-custom_proxy_group=🍎 AppleTV`select`[]✅ 国内直连`[]🚀 国外流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点
-custom_proxy_group=🎶 TikTok`select`[]🚀 国外流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点
-custom_proxy_group=📲 Telegram`select`[]🚀 国外流量`[]✅ 国内直连`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点
-custom_proxy_group=🍎 苹果服务`select`[]✅ 国内直连`[]🚀 国外流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点
+custom_proxy_group=🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯`select`(ZGO|backup|_)
+custom_proxy_group=🇺🇸洛杉矶`select`(洛杉矶|洛杉矶)
+custom_proxy_group=👌CMCC-IPV6`select`(CMCC-IPV6|CMCC)
+custom_proxy_group=🇷🇺俄罗斯`select`(RU|俄罗斯|🇷🇺)
+custom_proxy_group=✅ 国内直连`select`[]DIRECT`(电信|联通|移动)`[]🚀 国外流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯`
+custom_proxy_group=🛸 IP归属地伪装`select`[]✅ 国内直连`(CN|电信|联通|移动)`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 国外流量`[]✅ 国内直连`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
+custom_proxy_group=🧚 AI`select`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
+custom_proxy_group=📹 Google-YouTube`select`[]🚀 国外流量`(尼日利亚|NG)`(土耳其|TR|Turkey)`(蒙古|MN)`(澳门|MO)`(RU)`(尼泊尔|NP)`(阿塞拜疆)`(孟加拉|BD)`(约旦|JO)`(柬埔寨|KH)`(阿根廷|AR)`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
+custom_proxy_group=🎬 EMBY`select`[]🚀 国外流量`[]✅ 国内直连`(Emby|emby)`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
+custom_proxy_group=🍎 AppleTV`select`[]✅ 国内直连`[]🚀 国外流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
+custom_proxy_group=🎶 TikTok`select`[]🚀 国外流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
+custom_proxy_group=📲 Telegram`select`[]🚀 国外流量`[]✅ 国内直连`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
+custom_proxy_group=🍎 苹果服务`select`[]✅ 国内直连`[]🚀 国外流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]✅ 国内直连`[]🚀 国外流量
 custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*(电信|联通|移动)).*)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`(^(?!.*(电信|联通|移动)).*)`http://www.gstatic.com/generate_204`300,,50
