--- a/clash/bbclash.ini
+++ b/clash/bbclash.ini
@@ -14,12 +14,12 @@ ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackm
 ruleset=✅ 国内直连,https://raw.githubusercontent.com/cutethotw/ClashRule/main/Rule/Inside.list
 ruleset=✅ 国内直连,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SteamCN/SteamCN.yaml
 ruleset=🚀 国外流量,https://raw.githubusercontent.com/cutethotw/ClashRule/main/Rule/Outside.list
-ruleset=🧚 AI,https://raw.githubusercontent.com/cutethotw/ClashRule/main/Rule/ChatGPT.list
-ruleset=🧚 AI,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.yaml
-ruleset=🧚 AI,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.yaml
-ruleset=🧚 AI,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.yaml
-ruleset=🧚 AI,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.yaml
-ruleset=🧚 AI,https://raw.githubusercontent.com/cutethotw/ClashRule/main/Rule/Perplexity.list
+ruleset=🚀 国外流量,https://raw.githubusercontent.com/cutethotw/ClashRule/main/Rule/ChatGPT.list
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.yaml
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.yaml
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.yaml
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.yaml
+ruleset=🚀 国外流量,https://raw.githubusercontent.com/cutethotw/ClashRule/main/Rule/Perplexity.list
 ruleset=✅ 国内直连,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.yaml
 ruleset=✅ 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PikPak/PikPak.yaml
@@ -38,8 +38,8 @@ ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackm
 ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBOAsia/HBOAsia.yaml
 ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBOUSA/HBOUSA.yaml
 ruleset=🍎 AppleTV,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleTV/AppleTV.yaml
-ruleset=🎬 EMBY,clash-classic:https://raw.githubusercontent.com/cutethotw/ClashRule/main/Rule/Emby.yaml
-ruleset=🎬 EMBY,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Emby/Emby.yaml
+ruleset=✅ 国内直连,clash-classic:https://raw.githubusercontent.com/cutethotw/ClashRule/main/Rule/Emby.yaml
+ruleset=✅ 国内直连,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Emby/Emby.yaml
 ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.yaml
 ruleset=✅ 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 ruleset=✅ 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
@@ -74,9 +74,7 @@ custom_proxy_group=🇷🇺俄罗斯`select`(RU|俄罗斯|🇷🇺)
 custom_proxy_group=✅ 国内直连`select`[]DIRECT`(电信|联通|移动)`[]🚀 国外流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯`
 custom_proxy_group=🛸 IP归属地伪装`select`[]✅ 国内直连`(CN|电信|联通|移动)`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 国外流量`[]✅ 国内直连`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
-custom_proxy_group=🧚 AI`select`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
 custom_proxy_group=📹 Google-YouTube`select`[]🚀 国外流量`(尼日利亚|NG)`(土耳其|TR|Turkey)`(蒙古|MN)`(澳门|MO)`(RU)`(尼泊尔|NP)`(阿塞拜疆)`(孟加拉|BD)`(约旦|JO)`(柬埔寨|KH)`(阿根廷|AR)`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
-custom_proxy_group=🎬 EMBY`select`[]🚀 国外流量`[]✅ 国内直连`(Emby|emby)`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
 custom_proxy_group=🍎 AppleTV`select`[]✅ 国内直连`[]🚀 国外流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
 custom_proxy_group=🎶 TikTok`select`[]🚀 国外流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
 custom_proxy_group=📲 Telegram`select`[]🚀 国外流量`[]✅ 国内直连`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
