--- a/clash/bbclash.ini
+++ b/clash/bbclash.ini
@@ -67,7 +67,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 国外流量`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
 custom_proxy_group=✈️ 手动选择`select`.*
 custom_proxy_group=🛩️ 手动选择备用`select`.*
-custom_proxy_group=🚁 自建节点`select`(ZGO|backup|_)
+custom_proxy_group=🚁 自建节点`select`(ZGO|backup)
 custom_proxy_group=🇺🇸洛杉矶`select`(洛杉矶|洛杉矶)
 custom_proxy_group=👌CMCC-IPV6`select`(CMCC-IPV6|CMCC)
 custom_proxy_group=🇷🇺俄罗斯`select`(RU|俄罗斯|🇷🇺)
