--- a/clash/bbclash.ini
+++ b/clash/bbclash.ini
@@ -10,6 +10,8 @@
 ;AI包括：OpenAI、Claude、Gemini、Copilot、Perplexity
 
 ;设置规则标志位
+ruleset=🇷🇺俄罗斯,https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/b-ru.list
+ruleset=🚀 国外流量,https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/X-img.list
 ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
 ruleset=✅ 国内直连,https://raw.githubusercontent.com/cutethotw/ClashRule/main/Rule/Inside.list
 ruleset=✅ 国内直连,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SteamCN/SteamCN.yaml
@@ -30,7 +32,7 @@ ruleset=🛸 IP归属地伪装,clash-classic:https://raw.githubusercontent.com/l
 ;ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
 ;ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
 ruleset=🛑 广告拦截,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ZhihuAds/ZhihuAds.yaml
-ruleset=📹 Google-YouTube,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.yaml
+ruleset=📹 YouTube,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.yaml
 ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.yaml
 ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.yaml
 ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.yaml
@@ -64,21 +66,21 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 国外流量`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
-custom_proxy_group=✈️ 手动选择`select`.*
-custom_proxy_group=🛩️ 手动选择备用`select`.*
-custom_proxy_group=🚁 自建节点`select`(ZGO|backup)
+custom_proxy_group=🚀 国外流量`select`[]♻️ 自动选择`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯`[]🔯 故障转移`[]🔮 负载均衡
+custom_proxy_group=✈️ 手动选择①`select`.*
+custom_proxy_group=🛩️ 手动选择②`select`.*
+custom_proxy_group=🚁 自建ZGO`select`(ZGO|backup)
 custom_proxy_group=🇺🇸洛杉矶`select`(洛杉矶|洛杉矶)
-custom_proxy_group=👌CMCC-IPV6`select`(CMCC-IPV6|CMCC)
+custom_proxy_group=👌WorkerIPV6`select`(CMCC-IPV6|CMCC)
 custom_proxy_group=🇷🇺俄罗斯`select`(RU|俄罗斯|🇷🇺)
-custom_proxy_group=✅ 国内直连`select`[]DIRECT`(电信|联通|移动)`[]🚀 国外流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯`
-custom_proxy_group=🛸 IP归属地伪装`select`[]✅ 国内直连`(CN|电信|联通|移动)`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 国外流量`[]✅ 国内直连`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
-custom_proxy_group=📹 Google-YouTube`select`[]🚀 国外流量`(尼日利亚|NG)`(土耳其|TR|Turkey)`(蒙古|MN)`(澳门|MO)`(RU)`(尼泊尔|NP)`(阿塞拜疆)`(孟加拉|BD)`(约旦|JO)`(柬埔寨|KH)`(阿根廷|AR)`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
-custom_proxy_group=🍎 AppleTV`select`[]✅ 国内直连`[]🚀 国外流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
-custom_proxy_group=🎶 TikTok`select`[]🚀 国外流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
-custom_proxy_group=📲 Telegram`select`[]🚀 国外流量`[]✅ 国内直连`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
-custom_proxy_group=🍎 苹果服务`select`[]✅ 国内直连`[]🚀 国外流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🇺🇸洛杉矶`[]👌CMCC-IPV6`[]🇷🇺俄罗斯
+custom_proxy_group=✅ 国内直连`select`[]DIRECT`(电信|联通|移动)`[]🚀 国外流量`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯`
+custom_proxy_group=🛸 IP归属地伪装`select`[]✅ 国内直连`(CN|电信|联通|移动)`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 国外流量`[]✅ 国内直连`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
+custom_proxy_group=📹 YouTube`select`[]🚀 国外流量`(尼日利亚|NG)`(土耳其|TR|Turkey)`(蒙古|MN)`(澳门|MO)`(RU)`(尼泊尔|NP)`(阿塞拜疆)`(孟加拉|BD)`(约旦|JO)`(柬埔寨|KH)`(阿根廷|AR)`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
+custom_proxy_group=🍎 AppleTV`select`[]✅ 国内直连`[]🚀 国外流量`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
+custom_proxy_group=🎶 TikTok`select`[]🚀 国外流量`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
+custom_proxy_group=📲 Telegram`select`[]🚀 国外流量`[]✅ 国内直连`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
+custom_proxy_group=🍎 苹果服务`select`[]✅ 国内直连`[]🚀 国外流量`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]✅ 国内直连`[]🚀 国外流量
 custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*(电信|联通|移动)).*)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`(^(?!.*(电信|联通|移动)).*)`http://www.gstatic.com/generate_204`300,,50
