--- a/clash/bclash.ini
+++ b/clash/bclash.ini
@@ -1,95 +1,93 @@
-;Custom_OpenClash_Rules
-;全分组防 DNS 泄漏订阅转换模板
-;作者：https://github.com/Aethersailor
-;项目地址：https://github.com/Aethersailor/Custom_OpenClash_Rules
-;基于 ACL4SSR 模板魔改而来，感谢原作者！
-;<必须>搭配本项目配套教程，实现最佳化的 OpenClash 使用效果！
-;教程：https://github.com/Aethersailor/Custom_OpenClash_Rules/wiki/OpenClash-%E8%AE%BE%E7%BD%AE%E6%96%B9%E6%A1%88
-;有问题可提 issue，或者加入本项目 Telegram 群组进行讨论
-;Telegram 群组：https://t.me/custom_openclash_rules_group
-;Telegram 通知频道：https://t.me/custom_openclash_rules
-
-;轻量版分流规则
-;仅包含基本的国内/国外分流功能，包含一些基本的直连规则，其余网站和IP全部代理
-;适合不需要解锁和分流需求的用户
-
 [custom]
+
+;去广告：支持
+;自动测速：支持
+;微软分流：支持
+;苹果分流：支持
+;增强中国IP段：支持
+;增强国外GFW：支持
+;显示IP归属地应用伪装：支持
+;AI包括：OpenAI、Claude、Gemini、Copilot、Perplexity
+
 ;设置规则标志位
-;以下规则，按照从上往下的顺序遍历，优先命中上位规则，规则重复无影响
-;修改顺序会影响分流效果
-
-;本地地址和域名直连
-ruleset=🎯 全球直连,[]GEOSITE,private
-ruleset=🎯 全球直连,[]GEOIP,private,no-resolve
-;本项目收录的直连规则
-ruleset=🎯 全球直连,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical.yaml,28800
-;本项目收录的代理规则
-ruleset=🚀 手动选择,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical.yaml,28800
-;谷歌在国内可用的域名直连
-ruleset=🎯 全球直连,[]GEOSITE,google-cn
-;国内游戏域名直连
-ruleset=🎯 全球直连,[]GEOSITE,category-games@cn
-;Steam 下载 CDN 直连
-ruleset=🎯 全球直连,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Steam_CDN_Classical.yaml,2880
-;各大游戏平台下载域名直连
-ruleset=🎯 全球直连,[]GEOSITE,category-game-platforms-download
-;BT Tracker 相关域名直连
-ruleset=🎯 全球直连,[]GEOSITE,category-public-tracker
-ruleset=🚀 GitHub,[]GEOSITE,github
-ruleset=🚀 测速工具,[]GEOSITE,category-speedtest
-ruleset=🍎 苹果服务,[]GEOSITE,apple
-ruleset=🎮 Steam,[]GEOSITE,steam
-ruleset=Ⓜ️ 微软服务,[]GEOSITE,microsoft
-ruleset=📢 谷歌FCM,[]GEOSITE,googlefcm
-ruleset=🇬 谷歌服务,[]GEOSITE,google
-ruleset=🚀 手动选择,[]GEOSITE,gfw
-ruleset=🎮 游戏平台,[]GEOSITE,category-games
-ruleset=🇬 谷歌服务,[]GEOIP,google,no-resolve
-;由于 OpenClash 使用的大陆白名单收录不全，此处留有 geosite:cn 作为国内域名兜底
-ruleset=🎯 全球直连,[]GEOSITE,cn
-;由于 OpenClash 使用的大陆白名单收录不全，此处留有 geoip:cn 作为国内 IP 兜底
-ruleset=🎯 全球直连,[]GEOIP,cn,no-resolve
-;以上兜底规则会根据实际情况随时取消
-;PT/BT 优化开启会使 80/443 以外端口的流量直连
-ruleset=🔀 非标端口,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Port_Direct.yaml,28800
-;国内冷门域名会命中漏网之鱼，如影响使用，请设置漏网之鱼直连
-;漏网之鱼直连时，无法通过 DNS 泄露测试，但是并不存在泄露
+ruleset=🇷🇺俄罗斯,https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/b-ru.list
+ruleset=🚀 国外流量,https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/X-img.list
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
+ruleset=✅ 国内直连,https://raw.githubusercontent.com/cutethotw/ClashRule/main/Rule/Inside.list
+ruleset=✅ 国内直连,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SteamCN/SteamCN.yaml
+ruleset=🚀 国外流量,https://raw.githubusercontent.com/cutethotw/ClashRule/main/Rule/Outside.list
+ruleset=🚀 国外流量,https://raw.githubusercontent.com/cutethotw/ClashRule/main/Rule/ChatGPT.list
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.yaml
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.yaml
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.yaml
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.yaml
+ruleset=🚀 国外流量,https://raw.githubusercontent.com/cutethotw/ClashRule/main/Rule/Perplexity.list
+ruleset=✅ 国内直连,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.yaml
+ruleset=✅ 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PikPak/PikPak.yaml
+ruleset=🛸 IP归属地伪装,clash-classic:https://raw.githubusercontent.com/lwd-temp/anti-ip-attribution/main/generated/rule-provider.yaml
+;ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+;ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+;ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
+;ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
+;ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
+ruleset=🛑 广告拦截,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ZhihuAds/ZhihuAds.yaml
+ruleset=📹 YouTube,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.yaml
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.yaml
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.yaml
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.yaml
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBO/HBO.yaml
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBOAsia/HBOAsia.yaml
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBOUSA/HBOUSA.yaml
+ruleset=🍎 AppleTV,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleTV/AppleTV.yaml
+ruleset=✅ 国内直连,clash-classic:https://raw.githubusercontent.com/cutethotw/ClashRule/main/Rule/Emby.yaml
+ruleset=✅ 国内直连,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Emby/Emby.yaml
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.yaml
+ruleset=✅ 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
+ruleset=✅ 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.yaml
+ruleset=🎶 TikTok,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.yaml
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia_Classical.yaml
+ruleset=✅ 国内直连,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.yaml
+ruleset=🚀 国外流量,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+ruleset=✅ 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.yaml
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.yaml
+ruleset=🍎 苹果服务,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.yaml
+ruleset=📲 Telegram,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Discord/Discord.yaml
+ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.yaml
+ruleset=🚀 国外流量,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=✅ 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=✅ 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=✅ 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+ruleset=✅ 国内直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
-;设置规则标志位结束
+;设置规则标志位
 
-;设置节点分组标志位
-;节点地区分组参考本项目推荐机场而设立
-custom_proxy_group=🚀 手动选择`select`[]♻️ 自动选择`[]ZGOZGO`[]🇺🇸 美国节点`[]🇷🇺俄罗斯`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]V2-无限流量`[]Worker-CMCC`[]🇬🇧 英国节点`[]V2-洛杉矶`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🚀 GitHub`select`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连`[]ZGOZGO`[]🇺🇸 美国节点`[]🇷🇺俄罗斯`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]V2-无限流量`[]Worker-CMCC`[]🇬🇧 英国节点`[]V2-洛杉矶`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`.*
-custom_proxy_group=🚀 GitHub`select`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连`[]ZGOZGO`[]🇺🇸 美国节点`[]🇷🇺俄罗斯`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]V2-无限流量`[]Worker-CMCC`[]🇬🇧 英国节点`[]V2-洛杉矶`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`.*
-custom_proxy_group=📢 谷歌FCM`select`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连`[]ZGOZGO`[]🇺🇸 美国节点`[]🇷🇺俄罗斯`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]V2-无限流量`[]Worker-CMCC`[]🇬🇧 英国节点`[]V2-洛杉矶`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`.*
-custom_proxy_group=🇬 谷歌服务`select`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连`[]ZGOZGO`[]🇺🇸 美国节点`[]🇷🇺俄罗斯`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]V2-无限流量`[]Worker-CMCC`[]🇬🇧 英国节点`[]V2-洛杉矶`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`.*
-custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🚀 手动选择`[]♻️ 自动选择`[]ZGOZGO`[]🇺🇸 美国节点`[]🇷🇺俄罗斯`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]V2-无限流量`[]Worker-CMCC`[]🇬🇧 英国节点`[]V2-洛杉矶`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`.*
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🚀 手动选择`[]♻️ 自动选择`[]ZGOZGO`[]🇺🇸 美国节点`[]🇷🇺俄罗斯`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]V2-无限流量`[]Worker-CMCC`[]🇬🇧 英国节点`[]V2-洛杉矶`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`.*
-custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🚀 手动选择`[]♻️ 自动选择`[]ZGOZGO`[]🇺🇸 美国节点`[]🇷🇺俄罗斯`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]V2-无限流量`[]Worker-CMCC`[]🇬🇧 英国节点`[]V2-洛杉矶`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`.*
-custom_proxy_group=🎮 Steam`select`[]🎯 全球直连`[]🚀 手动选择`[]♻️ 自动选择`[]ZGOZGO`[]🇺🇸 美国节点`[]🇷🇺俄罗斯`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]V2-无限流量`[]Worker-CMCC`[]🇬🇧 英国节点`[]V2-洛杉矶`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`.*
-custom_proxy_group=🚀 测速工具`select`[]🎯 全球直连`[]🚀 手动选择`[]♻️ 自动选择`[]ZGOZGO`[]🇺🇸 美国节点`[]🇷🇺俄罗斯`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]V2-无限流量`[]Worker-CMCC`[]🇬🇧 英国节点`[]V2-洛杉矶`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`.*
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连`[]ZGOZGO`[]🇺🇸 美国节点`[]🇷🇺俄罗斯`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]V2-无限流量`[]Worker-CMCC`[]🇬🇧 英国节点`[]V2-洛杉矶`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`.*
-custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]🎯 全球直连
-custom_proxy_group=ZGOZGO`url-test`(ZGO|ZGO)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|UnitedStates)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇷🇺俄罗斯`url-test`(RU|俄罗斯|🇷🇺|俄|)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 新加坡节点`url-test`(新加坡|坡|狮城|SG|Singapore)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇼🇸 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=V2-无限流量`url-test`(无限流量|无限)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=Worker-CMCC`url-test`(CMCC|CMCC-IPV6)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇬🇧 英国节点`url-test`(英国|Britain|United Kingdom|England|伦敦)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=V2-洛杉矶`url-test`(洛杉矶|洛杉矶)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇩🇪 德国节点`url-test`(德国|Germany|柏林|法兰克福)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇳🇱 荷兰节点`url-test`(荷兰|Netherlands|阿姆斯特丹)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇷 土耳其节点`url-test`(土耳其|Turkey|Türkiye)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🌐 其他地区`url-test`(^(?!.*(港|HK|hk|Hong Kong|HongKong|hongkong|深港|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|UnitedStates|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|(?<!尼|-)日|JP|Japan|🇯🇵|新加坡|坡|狮城|SG|Singapore|台|新北|彰化|TW|Taiwan|KR|Korea|KOR|首尔|韩|韩|加拿大|Canada|渥太华|温哥华|卡尔加里|英国|Britain|United Kingdom|England|伦敦|法国|France|巴黎|德国|Germany|柏林|法兰克福|荷兰|Netherlands|阿姆斯特丹|土耳其|Turkey|Türkiye)).*)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
+;设置分组标志位
+custom_proxy_group=🚀 国外流量`select`[]♻️ 自动选择`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯`[]🔯 故障转移`[]🔮 负载均衡
+custom_proxy_group=✈️ 手动选择①`select`.*
+custom_proxy_group=🛩️ 手动选择②`select`.*
+custom_proxy_group=🚁 自建ZGO`select`(ZGO|backup)
+custom_proxy_group=🇺🇸洛杉矶`select`(洛杉矶|洛杉矶)
+custom_proxy_group=👌WorkerIPV6`select`(CMCC-IPV6|CMCC)
+custom_proxy_group=🇷🇺俄罗斯`select`(RU|俄罗斯|🇷🇺)
+custom_proxy_group=✅ 国内直连`select`[]DIRECT`(电信|联通|移动)`[]🚀 国外流量`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯`
+custom_proxy_group=🛸 IP归属地伪装`select`[]✅ 国内直连`(CN|电信|联通|移动)`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 国外流量`[]✅ 国内直连`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
+custom_proxy_group=📹 YouTube`select`[]🚀 国外流量`(尼日利亚|NG)`(土耳其|TR|Turkey)`(蒙古|MN)`(澳门|MO)`(RU)`(尼泊尔|NP)`(阿塞拜疆)`(孟加拉|BD)`(约旦|JO)`(柬埔寨|KH)`(阿根廷|AR)`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
+custom_proxy_group=🍎 AppleTV`select`[]✅ 国内直连`[]🚀 国外流量`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
+custom_proxy_group=🎶 TikTok`select`[]🚀 国外流量`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
+custom_proxy_group=📲 Telegram`select`[]🚀 国外流量`[]✅ 国内直连`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
+custom_proxy_group=🍎 苹果服务`select`[]✅ 国内直连`[]🚀 国外流量`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
+custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]✅ 国内直连`[]🚀 国外流量
+custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*(电信|联通|移动)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 故障转移`fallback`(^(?!.*(电信|联通|移动)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔮 负载均衡`load-balance`(^(?!.*(电信|联通|移动)).*)`http://www.gstatic.com/generate_204`300,,50
 ;设置分组标志位
 
-;下方参数请勿修改
 enable_rule_generator=true
 overwrite_original_rules=true
 
+;clash_rule_base=https://raw.githubusercontent.com/cutethotw/ClashRule/main/GeneralClashConfig.yml
