--- a/clash/bbbclash.ini
+++ b/clash/bbbclash.ini
@@ -11,6 +11,7 @@
 
 ;设置规则标志位
 ruleset=🖼️ Google相册,https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/GooglePhoto.list
+ruleset=📌 Google,clash-classic:https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/google.yaml
 ruleset=🇷🇺俄罗斯,https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/b-ru.list
 ruleset=🚀 国外流量,https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/X-img.list
 ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
@@ -69,6 +70,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🚀 国外流量`select`[]♻️ 自动选择`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯`[]🔯 故障转移`[]🔮 负载均衡
 custom_proxy_group=🖼️ Google相册`select`[]🚀 国外流量`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
+custom_proxy_group=📌 Google`select`[]🚁 自建ZGO`[]🚀 国外流量`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
 custom_proxy_group=✈️ 手动选择①`select`.*
 custom_proxy_group=🛩️ 手动选择②`select`.*
 custom_proxy_group=🚁 自建ZGO`url-test`(ZGO|backup)`http://www.gstatic.com/generate_204`300,,50
