--- a/clash/bbbclash.ini
+++ b/clash/bbbclash.ini
@@ -12,7 +12,7 @@
 ;设置规则标志位
 ruleset=🖼️ Google相册,https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/GooglePhoto.list
 ruleset=📌 Google,clash-classic:https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/google.yaml
-ruleset=🇷🇺俄罗斯,https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/b-ru.list
+ruleset=🇷🇺俄罗斯选择,https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/b-ru.list
 ruleset=🚀 国外流量,https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/X-img.list
 ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
 ruleset=✅ 国内直连,https://raw.githubusercontent.com/cutethotw/ClashRule/main/Rule/Inside.list
@@ -76,6 +76,7 @@ custom_proxy_group=🛩️ 手动选择②`select`.*
 custom_proxy_group=🚁 自建ZGO`url-test`(ZGO|backup)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇸洛杉矶`url-test`(洛杉矶|洛杉矶)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=👌WorkerIPV6`url-test`(CMCC-IPV6|CMCC)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇷🇺俄罗斯选择`select`[]🇷🇺俄罗斯`[]♻️ 自动选择`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯`[]🔯 故障转移`[]🔮 负载均衡
 custom_proxy_group=🇷🇺俄罗斯`url-test`(RU|俄罗斯|🇷🇺|First)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=✅ 国内直连`select`[]DIRECT`(电信|联通|移动)`[]🚀 国外流量`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯`
 custom_proxy_group=🛸 IP归属地伪装`select`[]✅ 国内直连`(CN|电信|联通|移动)`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
