--- a/clash/bbbclash.ini
+++ b/clash/bbbclash.ini
@@ -74,10 +74,10 @@ custom_proxy_group=📌 Google`select`[]🚁 自建ZGO`[]🚀 国外流量`[]✈
 custom_proxy_group=✈️ 手动选择①`select`.*
 custom_proxy_group=🛩️ 手动选择②`select`.*
 custom_proxy_group=🚁 自建ZGO`url-test`(ZGO|backup)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸洛杉矶`url-test`(洛杉矶|洛杉矶)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸洛杉矶`fallback`(洛杉矶|洛杉矶)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=👌WorkerIPV6`url-test`(CMCC-IPV6|CMCC)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇷🇺俄罗斯选择`select`[]🇷🇺俄罗斯`[]♻️ 自动选择`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯`[]🔯 故障转移`[]🔮 负载均衡
-custom_proxy_group=🇷🇺俄罗斯`url-test`(RU|俄罗斯|🇷🇺|First)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇷🇺俄罗斯`fallback`(RU|俄罗斯|🇷🇺|First)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=✅ 国内直连`select`[]DIRECT`(电信|联通|移动)`[]🚀 国外流量`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯`
 custom_proxy_group=🛸 IP归属地伪装`select`[]✅ 国内直连`(CN|电信|联通|移动)`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 国外流量`[]✅ 国内直连`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
