--- a/clash/bbbclash.ini
+++ b/clash/bbbclash.ini
@@ -75,7 +75,7 @@ custom_proxy_group=✈️ 手动选择①`select`.*
 custom_proxy_group=🛩️ 手动选择②`select`.*
 custom_proxy_group=🚁 自建ZGO`fallback`(ZGO|backup)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇸洛杉矶`fallback`(洛杉矶|洛杉矶)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=👌WorkerIPV6`url-test`(CMCC-IPV6|CMCC)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=👌WorkerIPV6`url-test`(MVless|-V6|CF_)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇷🇺俄罗斯选择`select`[]🇷🇺俄罗斯`[]♻️ 自动选择`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯`[]🔯 故障转移`[]🔮 负载均衡
 custom_proxy_group=🇷🇺俄罗斯`fallback`(RU|俄罗斯|🇷🇺|First)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=✅ 国内直连`select`[]DIRECT`(电信|联通|移动)`[]🚀 国外流量`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯`
