--- a/clash/ttclash.ini
+++ b/clash/ttclash.ini
@@ -12,7 +12,7 @@
 ;设置规则标志位
 ruleset=🚀 国外流量,https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/GooglePhoto.list
 ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/google.yaml
-ruleset=🇷🇺俄罗斯选择,https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/b-ru.list
+ruleset=🚀 国外流量,https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/b-ru.list
 ruleset=🚀 国外流量,https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/X-img.list
 ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
 ruleset=✅ 国内直连,https://raw.githubusercontent.com/cutethotw/ClashRule/main/Rule/Inside.list
