--- a/clash/ttclash.ini
+++ b/clash/ttclash.ini
@@ -71,7 +71,7 @@ custom_proxy_group=👌WorkerIPV6`url-test`(MVless|MTrojan2)`http://www.gstatic.
 custom_proxy_group=✅ 国内直连`select`[]DIRECT`(电信|联通|移动)`[]🚀 国外流量`[]👌WorkerIPV6`
 custom_proxy_group=🛸 IP归属地伪装`select`[]✅ 国内直连`(CN|电信|联通|移动)`[]👌WorkerIPV6
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 国外流量`[]✅ 国内直连`[]👌WorkerIPV6
-custom_proxy_group=📹 YouTube`select`[]👌WorkerIPV6`[]🚀 国外流量`(尼日利亚|NG)`(土耳其|TR|Turkey)`(蒙古|MN)`(澳门|MO)`(RU)`(尼泊尔|NP)`(阿塞拜疆)`(孟加拉|BD)`(约旦|JO)`(柬埔寨|KH)`(阿根廷|AR)`[]👌WorkerIPV6
+custom_proxy_group=📹 YouTube`select`[]👌WorkerIPV6`[]🚀 国外流量`(尼日利亚|NG)`(土耳其|TR|Turkey)`(蒙古|MN)`(澳门|MO)`(RU)`(尼泊尔|NP)`(阿塞拜疆)`(孟加拉|BD)`(约旦|JO)`(柬埔寨|KH)`(阿根廷|AR)
 custom_proxy_group=🍎 AppleTV`select`[]✅ 国内直连`[]🚀 国外流量`[]👌WorkerIPV6
 custom_proxy_group=🎶 TikTok`select`[]🚀 国外流量`[]👌WorkerIPV6
 custom_proxy_group=📲 Telegram`select`[]🚀 国外流量`[]✅ 国内直连`[]👌WorkerIPV6
