--- a/clash/ttclash.ini
+++ b/clash/ttclash.ini
@@ -64,7 +64,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 国外流量`select`[]♻️ 自动选择`[]👌WorkerIPV6`[]🔯 故障转移`[]🔮 负载均衡
+custom_proxy_group=🚀 国外流量`select`[]♻️ 自动选择`[]👌WorkerIPV6`[]🔯 故障转移`[]🔮 负载均衡`(^(?!.*(电信|联通|移动)).*)
 custom_proxy_group=👌WorkerIPV6`url-test`(MVless|MTrojan2)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=✅ 国内直连`select`[]DIRECT`(电信|联通|移动)`[]🚀 国外流量`[]👌WorkerIPV6`
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 国外流量`[]✅ 国内直连`[]👌WorkerIPV6
