--- a/clash/rrclash.ini
+++ b/clash/rrclash.ini
@@ -65,7 +65,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=🚀 国外流量`select`[]♻️ 自动选择`[]👌WorkerIPV6`[]🔯 故障转移`[]🔮 负载均衡`.*
-custom_proxy_group=👌WorkerIPV6`url-test`(MVless|MTrojan2)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=👌WorkerIPV6`fallback`(MVless|MTrojan2)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=✅ 国内直连`select`[]DIRECT`(电信|联通|移动)`[]🚀 国外流量`[]👌WorkerIPV6`
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 国外流量`[]✅ 国内直连`.*
 custom_proxy_group=📹 YouTube`select`[]🚀 国外流量`.*
@@ -73,7 +73,7 @@ custom_proxy_group=🎶 TikTok`select`[]🚀 国外流量`.*
 custom_proxy_group=📲 Telegram`select`[]🚀 国外流量`[]✅ 国内直连`.*
 custom_proxy_group=🍎 苹果服务`select`[]✅ 国内直连`[]🚀 国外流量`.*
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]✅ 国内直连`[]🚀 国外流量
-custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*(电信|联通|移动)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 自动选择`fallback`(^(?!.*(电信|联通|移动)).*)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`(^(?!.*(电信|联通|移动)).*)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔮 负载均衡`load-balance`(^(?!.*(电信|联通|移动)).*)`http://www.gstatic.com/generate_204`300,,50
 ;设置分组标志位
