--- a/clash/rrclash.ini
+++ b/clash/rrclash.ini
@@ -11,6 +11,7 @@
 
 ;设置规则标志位
 ruleset=🚀 国外流量,https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/GooglePhoto.list
+ruleset=📹 YouTube,https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/youtubevideo.list
 ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/burning/surge-list/refs/heads/master/clash/google.yaml
 ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
 ruleset=✅ 国内直连,https://raw.githubusercontent.com/cutethotw/ClashRule/main/Rule/Inside.list
@@ -31,7 +32,6 @@ ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackm
 ;ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
 ;ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
 ruleset=🛑 广告拦截,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ZhihuAds/ZhihuAds.yaml
-ruleset=📹 YouTube,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.yaml
 ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.yaml
 ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.yaml
 ruleset=🚀 国外流量,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.yaml
