--- a/clash/rrclash.ini
+++ b/clash/rrclash.ini
@@ -73,7 +73,7 @@ custom_proxy_group=🎶 TikTok`select`[]🚀 国外流量`.*
 custom_proxy_group=📲 Telegram`select`[]🚀 国外流量`[]✅ 国内直连`.*
 custom_proxy_group=🍎 苹果服务`select`[]✅ 国内直连`[]🚀 国外流量`.*
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]✅ 国内直连`[]🚀 国外流量
-custom_proxy_group=♻️ 自动选择`fallback`(^(?!.*(电信|联通|移动)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 自动选择`fallback`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`(^(?!.*(电信|联通|移动)).*)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔮 负载均衡`load-balance`(^(?!.*(电信|联通|移动)).*)`http://www.gstatic.com/generate_204`300,,50
 ;设置分组标志位
