--- a/clash/bbbclash.ini
+++ b/clash/bbbclash.ini
@@ -68,7 +68,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 国外流量`select`[]♻️ 自动选择`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯`[]🔯 故障转移`[]🔮 负载均衡
+custom_proxy_group=🚀 国外流量`select`[]🚁 自建ZGO`[]♻️ 自动选择`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯`[]🔯 故障转移`[]🔮 负载均衡
 custom_proxy_group=🖼️ Google相册`select`[]🚀 国外流量`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🚁 自建ZGO`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
 custom_proxy_group=📌 Google`select`[]🚁 自建ZGO`[]🚀 国外流量`[]✈️ 手动选择①`[]🛩️ 手动选择②`[]🇺🇸洛杉矶`[]👌WorkerIPV6`[]🇷🇺俄罗斯
 custom_proxy_group=✈️ 手动选择①`select`.*
